--- a/html/tt_style.html
+++ b/html/tt_style.html
@@ -7,7 +7,8 @@
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 220px;
+    width: 800px;
+    height: 600px;
     background-color: #fff;
     color: #333;
     text-align: left;
@@ -19,12 +20,22 @@
     top: 1.5em;
     left: 0;
     box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
-    transition: opacity 0.2s;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
     opacity: 0;
+    transform-origin: top left;
 }
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
 }
+
+.tooltiptext iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    zoom: 0.5;
+    pointer-events: none; /* disable interaction */
+}
+
 </style>
